--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,6 @@ jobs:
       # build and push Docker image
       - run: |
           TAG=$CIRCLE_BUILD_NUM
-          docker build -t emmaogji/mintelweather:$TAG . --build-arg location_key=$LOCATION_API_KEY --build-arg weather_key=$WEATHER_API_KEY
+          docker build -t emmaogiji/mintelweather:$TAG . --build-arg location_key=$LOCATION_API_KEY --build-arg weather_key=$WEATHER_API_KEY
           echo $DOCKERHUB_PASSWORD | docker login -u emmaogiji --password-stdin
           docker push emmaogiji/mintelweather:$TAG
