Output plots and groups: - Add branch filter to CI/CD - Change functionality to write to .csv file first - Add functions to interpret csv data - Update requirements.txt

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,10 @@ orbs:
 workflows:
   build-and-test:
       jobs:
-        - Build and Push
+        - Build and Push:
+            filters:
+              branches:
+                only: master
 
 jobs:
   Build and Push:
