Solve Container GUI error: - Update readme to mention environment var and docker compose - Add meaningful logging an bind to host 0.0.0.0 to allow access

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   app:
-    image: my-app:latest
+    image: emmaogiji/mintelweather:local
     build:
       context: .
       args:
